--- a/servers/cluster_config.json
+++ b/servers/cluster_config.json
@@ -1,10 +1,11 @@
 [
     {
-        "host": "127.0.0.1",
-        "port": "3001"
+        "host": "0.0.0.0",
+        "port": "3000"
     },
     {
-        "host": "127.0.0.1",
-        "port": "3002"
+        "host": "0.0.0.0",
+        "port": "3000",
+        "socket_port": "6110"
     }
 ]
